# ScholarshipCoach

./: .gitignore  IMPLEMENTATION_CONTEXT.md  LICENSE  README.md  pyproject.toml
.codex/: config.toml
app/: helpers.py  main.py
docs/: SCHOLARSHIPCOACH_PORTFOLIO_UPGRADE_PLAN.md  evaluation.md  system_design.md
reports/: golden_eval_20260222_054100.md  golden_eval_20260228_142238.md  golden_eval_20260228_164329.md  golden_eval_20260228_164352.md  golden_eval_20260228_193222.md  golden_eval_20260228_194049.md  golden_eval_20260228_202803.md  golden_eval_20260228_204524.md  golden_eval_20260228_205018.md  golden_eval_20260228_215410.md  golden_eval_20260228_215548.md  golden_eval_20260228_215630.md  golden_eval_20260228_215708.md  golden_eval_20260228_215850.md  golden_eval_20260228_220138.md  golden_eval_20260228_220419.md  golden_eval_20260228_220552.md  golden_eval_20260301_020431.md  golden_eval_20260301_020545.md  golden_eval_20260302_031321.md  golden_eval_20260302_035002.md  golden_eval_20260302_035103.md  golden_eval_20260302_035131.md
scripts/: build_snapshot.py  evaluate_golden_students.py  run_ingest.py  tune_weights.py
src/: text_utils.py
tests/: conftest.py  test_amount_utility_log.py  test_canonical_id.py  test_eligibility_rules.py  test_embeddings_cache_key.py  test_eval_stability.py  test_evaluate_golden_students.py  test_explainability_helpers.py  test_multiobjective_selection.py  test_relevance_labeling.py  test_run_ingest.py  test_snapshotting.py  test_source_parsing.py  test_stage2_embeddings_mode.py  test_stage2_scoring.py  test_text_utils.py  (+7 more)
(+1151 files in other folders)
