[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholarshipcoach"
version = "0.1.0"
description = "ScholarshipCoach project scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "pyarrow",
  "scikit-learn",
  "streamlit",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"